Bug 156594 - A11Y sidebar: not fixable warning about "Avoid background images."
Summary: A11Y sidebar: not fixable warning about "Avoid background images."
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-08-03 11:34 UTC by Gabor Kelemen (Collabora)
Modified: 2023-08-17 13:07 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-08-03 11:34:22 UTC
attachment 188740 [details] has a page background image set.
The accessibility sidebar gives a warning about this, but no Fix button to solve the issue. Screenshot is attachment 188741 [details]

1. Open attached file
2. Open the Accessibility sidebar
3. Observe the warning "Avoid background images."
-> Should have a Fix button to open the Page style properties dialog

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eff5a3fe98ca5d1d28c4f5386c4af8a3be8f5703
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2023-08-10 09:09:19 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d190758ecee87c2d5d3944e40c4cca6850ce7fd2

tdf#156594 - A11Y - add fix button for "Avoid background images."

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 BogdanB 2023-08-12 19:37:03 UTC
The button is here. Thanks.

Verified with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9d322bfa580839f48d2f4ce6cdd6b18c8253af85
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2023-08-17 13:07:53 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/2bde3fb10964e1e7d7f561de925eb06111c78cb8

tdf#156594 - A11Y - add fix button for "Avoid background images."

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.