tdf#156594 - A11Y - add fix button for "Avoid background images."

- add fix button for "Avoid background images."
- add .uno:PageAreaDialog command to navigate page style-->Area tab

Change-Id: Ibad4e8896d05e72713189a0042c3f156a0733171
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155464
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit 0ec629fe50220cb216c26c5ab93c194b9d987058)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155484
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>